<resources>
    <string name="app_name">CrmNinJa</string>
    <string name="loggin_user">Username</string>
    <string name="loggin_pass">Password</string>
    <string name="tvQuenMK">Forgot Password</string>
    <string name="tvDky">Đăng ký</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="tvSdt">Số điện thoại</string>
    <string name="tvTenKH">Tên khách hàng</string>
    <string name="tvEmail">Email</string>
    <string name="tvZalo">Zalo</string>
    <string name="tvSkype">Skype</string>
    <string name="tvTP">Thành phố</string>
    <string name="tvNgaySinh">Ngày sinh</string>
    <string name="tvDC">Địa chỉ</string>
    <string name="tvPhanMen">Phần mềm quan tâm</string>
    <string name="tvDoiTuong">Đối tượng khách hàng</string>
    <string name="tvNguonKhach">Nguồn khách</string>
    <string name="tvLoaiKH">Loại khách hàng</string>
    <string name="tvNDCuocGoi">Nội dung cuộc gọi</string>
    <string name="tvTTKH">Trạng thái khách hàng</string>
    <string name="tvGhiChu">Ghi chú</string>
    <string name="btn_luu">Lưu</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">ListCall</string>
    <string name="title_dashboard">AddCall</string>
    <string name="title_notifications">Remind</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnSeARCH">search</string>
    <string name="STT">STT</string>
    <string name="SDT">sdt</string>
    <string name="tenKH">ten KH</string>
    =======
    <string name="ninjapm">Ninja Phần Mềm</string>
    <string name="btn_SignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="statistical">Thống Kê</string>
    <string name="frg_result_search_name">name</string>
    <string name="frg_result_search">data</string>
    <string name="dialog_addCall">Bạn có muốn thêm cuộc gọi mới?</string>
    <string name="dialog_btn_ok">Đồng ý</string>
    <string name="dialog_btn_no">Hủy</string>
    <string name="hint_content_search">Nhập sđt hoặc email</string>
    <string name="act_static_socuocgoi">Số cuộc gọi</string>
    <string name="ThemCG">Thêm cuộc gọi mới</string>
    <string name="statis_KHcu">Khách hàng cũ</string>
    <string name="act_static_KHmoi">Khách hàng mới</string>
    <string name="act_static_Khcu">Khách hàng cũ</string>
    <string name="sigup">Sign Up</string>
    <string name="intro">Don\'t have an account?</string>
>>>>>>> a28412658da352ed7c4536c4ea15bb7d3764494c
    >>>>>>> f7760b6b666f2fef06cc0d1b93be3ae07d7d07c0
</resources>
